--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 .bg-beige {
-    background-color: #f5f5dc; /* Code hexadécimal pour la couleur beige */
+    background-color: #f5f5dc; 
 }
 
 .bg-vert {
-    background-color: #809A83; /* Code hexadécimal pour la couleur vert */
+    background-color: #809A83; 
+}
+
+
+.btn-vert {
+    background-color: #809A83; 
 }
 
 .ma-police {
@@ -20,9 +25,9 @@
 }
 
 .vertical-text {
-    writing-mode: vertical-rl; /* Définit l'écriture verticale de droite à gauche */
-    transform: rotate(180deg);  /* Tourne le texte de 180 degrés */
-    transform-origin: bottom;   /* Point de rotation en bas (peut être ajusté) */
+    writing-mode: vertical-rl; 
+    transform: rotate(180deg); 
+    transform-origin: bottom;  
 }
 
 .font-1 {
@@ -32,6 +37,16 @@
 .font-2 {
     font-family: 'Bebas Neue', sans-serif;
 }
+
+.color-button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 5px;
+    cursor: pointer;
+}
+
+
 
 
 
